[package]
name = "web-room-relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
dashmap = "5.5.3"
futures = "0.3.28"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wtransport = "0.1.6"
zstd = "0.12.4"
